objects/LAT_InventoryPOP__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventarios POP</relationshipLabel>
        <relationshipName>Inventarios_POP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Data Inventario</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                    <default>true</default>
                    <label>Pendente</label>
                </value>
                <value>
                    <fullName>Concluido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Inventario POP</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Código Inventario POP</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventarios POP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>